[package]
name = "celophane"
version = "0.1.0"
license = "Unlicense"
authors = ["pgold"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
ethers = { version = "0.2.1", features = ["celo"] }
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tracing-futures = "0.2.5"
serde_json = "1.0.63"
